# CMakeList.txt : projet CMake pour TD1, incluez la source et définissez
# la logique spécifique au projet ici.
#

# Ajoutez une source à l'exécutable de ce projet.
add_executable(TD1_ex1 "ex1.c")
add_executable(TD1_ex2 "ex2.c")
add_executable(TD1_ex3 "ex3.c")
add_executable(TD1_ex4 "ex4.c")
add_executable(TD1_ex5 "ex5.c")
add_executable(TD1_ex6 "ex6.c")
add_executable(TD1_ex7 "ex7.c")
add_executable(TD1_ex8 "ex8.c")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
