# CMakeList.txt : projet CMake pour TD4-5, incluez la source et définissez
# la logique spécifique au projet ici.
#

# Ajoutez une source à l'exécutable de ce projet.
add_executable (ex1 "ex1.cpp")
add_executable (ex2 "ex2.cpp" "ex2.hpp")
add_executable (ex3 "ex3.cpp")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
